--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -10,82 +10,80 @@ description: the beginner's guide to understanding data
 </PageDescription>
 
 ## What is data?
+*da·ta* | ˈdadə, ˈdādə | _noun_
 
-*Data is the fuel that powers artificial intelligence.* Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality.
+1. the quantities, characters, or symbols on which operations are performed by a computer
+1. facts and statistics collected together for reference or analysis.
 
-Before taking the AI plunge, you need to have the right data and enough of it. This includes acquiring data, cleaning it, filling in the gaps, and in a majority of cases taking additional steps to render it useful. Those familiar with [Rob Thomas' AI Ladder](https://video.cube365.net/c/910697) will note that this takes place in the "Collect" and "Organize" steps.
+_Simply put, data is a recorded snapshot of anything that has happened or is happening._ This manifests in countless ways: visualizing sales data, the nutrition data on our food, the data withheld in the pages of a book, data representing foot traffic through a city, data returned from developer APIs. These images exhibit the complexity of data, generally bound by human creativity and ingenuity. If it can be captured, it’s considered data.
 
-What follows are several of the key considerations with respect to collecting and using data.
+Data encompasses a lot. However, there are ways to describe it that places it in neat boxes.
 
-## Data collection
-#### Sampling
+### Zooming in
+To begin to unpack data’s nuances, we can think of data as having different attributes:
 
-Sampling helps ensure your dataset matches the real world and that a given sliver of data is as representative of the whole as possible.
+- Nature
+- Shape
+- Format
+- Origin
 
-Generally, in statistics and machine learning (ML), we want to know as much as possible about a certain population — a specific set of people with shared characteristics that make them interesting to us (e.g. new homebuyers in Montana, Yankee fans outside of New York, etc.).
+#### Attribute 1: Nature
+One of the first things that most data practitioners take stock of is the nature of their data. In other words, whether their data is quantitative or qualitative.
 
-In an ideal world, we’d survey each and every individual in that population, or the majority of them. In the real world, that’s expensive, tedious, and sometimes impossible. Instead, data collectors try to select a sliver of the population that best represents the population as a whole. It could look something like this.
+Quantitative data represents measurable things, such as average inches of rainfall per year in New York City, and is usually recorded numerically. Qualitative data, on the other hand, is usually recorded with symbols or words and describes qualities or characteristics. User experience interviews are an examples of qualitative data.
 
-<Row>
-<Column colLg={12}>
+Sometimes the same idea can be conveyed by either quantitative data or qualitative data.  For example, the temperature outside is 40℃ (104°F) versus “Hot” or 🥵.
 
-![Sampling](../../images/basics/data/Image_1.png)
+![Quantitative pictogram showing an upward trending line and qualitative pictogram showing three abstracted paragraphs](../../images/data/Nature.png)
 
-</Column>
-</Row>
-
-Assuming you could only pick four people, that’s probably the closest you could get to representing the population. Naturally, as the sample size grows closer to the population size, your sample characteristics will be closer to the true characteristics of the whole.
-
-In cases where the data wasn't properly sampled, you'll almost certainly come to the wrong conclusions about your population as a whole, meaning you're not giving your users what they need. Assuming that's the case, it’s irreparable and unable to reconcile without going out and getting more data about your population.
-
-#### (Ease of) Acquiring data
-
-This is knowing what it takes to actually get the data. Data can take multiple different forms. Sometimes it's in a database, sometimes it's in a filing cabinet, sometimes it's scattered across someone's desk. Some data is proprietary and some is public domain. Sometimes someone is positive that it exists, they just have to go find it.
-
-Wrangling data across disparate sources can take a substantial amount of time, and more so if it requires generating or digitizing the data.
-
-#### Data completeness
-
-Data completeness indicates whether all the data that you need is available in your data resources and ensuring your data doesn’t have gaps.
-
-If you buy a dozen eggs for a recipe, you don’t want to get home and find that you're missing one. If you’re working with a large dataset — even with millions of records — you don’t want to find that your data has gaps or that certain fields are missing.
-
-In a contrived example, suppose you're making a mood tracker and you import a table that looks like the one below. Your data doesn’t tell you how John felt on Monday. In the real world, data specialists can sometimes fill gaps like this, though it isn’t easy. Sometimes it renders the data unusable, requiring you to throw it out.
-
-| Day     | John's Mood |
-| ------- | ----------  |
-| Sunday  | Good        |
-| Monday  |             |
-| Tuesday | Bad         |
+By combining both kinds of data, you can begin to see a fuller picture of the phenomena you are measuring. Consider you’re looking at the weather where you’ll be going on vacation. With quantitative data, you can know what the average highs, lows, and wind speed are, while qualitative data would tell you what that weather feels like. Whereas qualitative data would say that 13℃ (55°F) and 40 km/h (25 mph), qualitative data would tell you it’s chilly.
 
 
+#### Attribute 2: Shape
+Another characteristic of data is shape. If the data is organized and follows a predictable pattern with strict rules, it’s called structured data. If the data doesn’t cohere to a discernible pattern, that data is unstructured. (There’s also a hybrid of the two, called semi-structured.)
 
-## Data organization
-#### Consolidating data
+It’s helpful to think of the difference between these two types of data as literal shapes. If you can easily fit your data into a rectangular grid with well-defined columns and rows, it’s likely structured (e.g. spreadsheets). If it doesn’t easily fall into columns and rows, such as a text document, it’s probably unstructured. If it loosely conforms to a pattern that you could make into a grid, like Yelp reviews, Wikipedia pages, or Tweets, it’s probably semi-structured.
 
-You have your mountain of data pulled from several different piles digitized and sitting in front of you, now what? Likely it'll need to be combined and put in a single place, formatted a specific way. At this step you have to put all of your data in one place and make it work together.
+![Structued data pictogram showing a neat grid of rectangles semi-structured pictogram showing loose grid of rectangles unstructured pictogram showing a mess of assorted shapes](../../images/data/Shape.png)
 
-For example, let's say you are trying to create a simple program to track your mood over time, along with the weather. Your journal entries are in a spreadsheet that you can export as a comma-separated value file (or .csv file). The weather data exists, but you'll have to use an API of some sort to pull it and pair it with your journal entries. Even though both piles of data exist and exist digitally, there is still work to pull them together in one place.
+#### Attribute 3: Format
+Data practitioners should know how their data is represented. This boils down to a few options:
 
-#### Consistent data
+- Numeric
+- Textual
+- Media (Images, Videos, Audio)
+- Hybrid
 
-Training an AI is akin to training a toddler. That toddler's knowledge is dependent on you being consistent in your teaching. For example, you can't expect your toddler to ever master arithmetic if you say 1+1=2 and also teach 1+1=3 at the same time. You can expect the same out of your system. Ultimately this is making sure all of your data is saying the same thing.
+The easiest way to ascertain the format of your data is to simply look at it. If you see numbers, it’s numeric; if you see primarily words, it’s textual. In more advanced cases, your data are media, such as images, videos, or audio files. Sometimes, a dataset can capture media, textual, and numeric data, such as web pages.
 
-#### Data richness
+When tackling media data, the photos/videos/audio is usually transformed into numeric data so computers can digest them. An example is breaking down a photograph into a grid of RGB (red-blue-green) values.
 
-Data richness is when the quality of the data paints a vivid picture. This means that you have enough data to get to the essence of what's really going on. It's finding the necessary data points to ensure that you're not conflating correlation with causation. Without data rich enough to describe the nature of your problem and environment, you run the risk of your AI missing the real connection.
+![Numeric pictogram showing a scatter plot textual pictogram showing written file rich media pictogram showing image](../../images/data/Format.png)
 
-For example, let's take a famous ice cream sales and murder rate correlation. An increase of ice cream sales is shown to coincide with an increase in homicides. If we left our observation there, we might try to — naively — ban the sale of ice cream. Of course we'd have no success, considering how these occurrences are only correlated; the missing variable being temperature, as ice cream sales and murder rates spike in hotter temperatures.
+#### Attribute 4: Origin
+Lastly, there is the question of how the data was created. The answer to this usually falls into three categories: observed, volunteered, and inferred.
 
+Observed data are when a person or machine records a phenomenon. Researchers performing use interviews and machines logging website clickthrough rates are examples. Volunteered data are self-reported and/or explicitly shared with data collectors by individuals. An example of volunteered data is anything shared on social networks. Inferred data are data based on the analysis of volunteered and/or observed information, such as credit scores.
 
-## Data collection and organization
-#### De-biased or bias transparent data
+As you move from observed data towards inferred data, subjectivity starts to creep in. More on this in the Data Decrees.
 
-This concern is one that needs to be top of mind, so that your AI doesn’t optimize inequity. Bias — prejudice in favor of or against one thing, person, or group compared with another — can be introduced at many stages of the process. If we choose an unrepresentative sample, it skews the dataset in favor of the overrepresented. During the data entry, subjective, and often qualitative, fields are subject to the user's interpretation, e.g. assessing how you feel on a day to day basis. Annotation, or tagging and labeling the data with pertinent information, brings with it the lenses each annotator sees the world through.
+![Observed pictogram showing person with arrows pointing into it volunteered pictogram showing person with arrows pointing away from it inferred pictogram showing person with lighting bulb](../../images/data/Origin.png)
 
-It's worth noting explicitly right now, that even assuming data purity and removing all bias from it — which in many cases is nothing short of impossible — machine learning by its very nature is always a form of statistical discrimination.
+### Data in context — The Understanding Continuum
+Many companies pride themselves on being data-driven. Leaders in the field have adopted data to make better business decisions; yet, for most companies, data hasn’t yielded much change in business outcomes. (citation needed). This is because many people are focusing on data rather than the what data enables: knowledge and wisdom.
+
+In order to understand this distinction, it’s helpful to reflect on Nathan Shedroff’s Understanding Continuum[4]. It serves as a blueprint to “Wisdom,” described as the future-facing application of acquired knowledge. While data, information, and even knowledge is useful, its usefulness is linked to the human problem it solves.
+
+![Numeric pictogram showing a scatter plot textual pictogram showing written file rich media pictogram showing image](../../images/data/DIKW.png)
+
+<Caption fullWidth>
+DIKW model, ©1994 Nathan Shedroff
+</Caption>
+
+Suppose you want to know what to wear outside. The data are the disparate temperatures recorded, various locations, the times of the day. (This is among a plethora of other figures semi- or unrelated to the problem; we this call noise.) Information is the organized data, associating temperatures with locations and time of day. It’s more useful, but not by much. (I doubt you care about last year’s forecast or what the weather is halfway across the world when you’re planning what to wear.) Knowledge begins to cement understanding by seeing the patterns latent in the data and information. (You might observe that it’s typically cold in the morning and gets warm by the afternoon.) Wisdom is knowing the best course of action based on acquired knowledge and experiences. (You would conclude that instead of wearing a sweater to wear a light jacket; it’s easier to remove and because it serves as a better shield from the wind chill.)
+
+Your end-users rarely care about data. They want it to work; work better, work faster, work more reliably. Creating solutions that achieve user and business outcomes requires understanding data in the context of the problem you're solving.
 
 ## Takeaway
-When we get in our car, we think of the destination, rarely what's needed to get us there. Insights are the destination, data is the fuel. Consequently, before you set off on your AI journey, be mindful of what it takes to acquire enough useful and de-biased data.
 
-Even though it's important to plan for where we want to land, it's equally important to understand how to get there. Data is one half of the AI equation, and requires conscious consideration.
+Data come in many shapes and sizes with some types better equipped to solve certain problems. Leveraging the right data for the job can give you a better picture of the world around you. However, raw data is seldom useful. When data is processed, organized, or presented in a given context, it becomes useful to us and the decisions we need to make.
