--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -4,19 +4,22 @@ title: "Data"
 
 <PageDescription>
 
-  These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean. The purpose of these explanations is to succinctly break down complicated topics without relying on technical jargon.
+
+These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean. The purpose of these explanations is to succinctly break down complicated topics without relying on technical jargon.
 
 </PageDescription>
 
+
 ## What is data?
 
-*Data is the fuel that powers artificial intelligence.* Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality.
+_Data is the fuel that powers artificial intelligence._ Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality.
 
 Before taking the AI plunge, you need to have the right data and enough of it. This includes acquiring data, cleaning it, filling in the gaps, and in a majority of cases taking additional steps to render it useful. Those familiar with [Rob Thomas' AI Ladder](https://video.cube365.net/c/910697) will note that this takes place in the "Collect" and "Organize" steps.
 
 What follows are several of the key considerations with respect to collecting and using data.
 
 ## Data collection
+
 #### Sampling
 
 Sampling helps ensure your dataset matches the real world and that a given sliver of data is as representative of the whole as possible.
@@ -28,10 +31,12 @@ In an ideal world, we’d survey each and every individual in that population, o
 <Row>
 <Column colLg={12}>
 
+
 ![Sampling](../../images/basics/data/Image_1.png)
 
 </Column>
 </Row>
+
 
 Assuming you could only pick four people, that’s probably the closest you could get to representing the population. Naturally, as the sample size grows closer to the population size, your sample characteristics will be closer to the true characteristics of the whole.
 
@@ -49,17 +54,16 @@ Data completeness indicates whether all the data that you need is available in y
 
 If you buy a dozen eggs for a recipe, you don’t want to get home and find that you're missing one. If you’re working with a large dataset — even with millions of records — you don’t want to find that your data has gaps or that certain fields are missing.
 
-In a contrived example, suppose you're making a mood tracker and you import a table that looks like the one below. Your data doesn’t tell you how John felt on Monday. In the real world, data specialists can sometimes fill gaps like this, though it isn’t easy. Sometimes it renders the data unusable, requiring you to throw it out.
+In a contrived example, suppose you're making a mood tracker and you import a table that looks like the one below. Your data doesn’t tell you how John felt on Tuesday. In the real world, data specialists can sometimes fill gaps like this, though it isn’t easy. Sometimes it renders the data unusable, requiring you to throw it out.
 
 | Day     | John's Mood |
-| ------- | ----------  |
+| ------- | ----------- |
 | Sunday  | Good        |
 | Monday  |             |
 | Tuesday | Bad         |
 
-
-
 ## Data organization
+
 #### Consolidating data
 
 You have your mountain of data pulled from several different piles digitized and sitting in front of you, now what? Likely it'll need to be combined and put in a single place, formatted a specific way. At this step you have to put all of your data in one place and make it work together.
@@ -76,8 +80,8 @@ Data richness is when the quality of the data paints a vivid picture. This means
 
 For example, let's take a famous ice cream sales and murder rate correlation. An increase of ice cream sales is shown to coincide with an increase in homicides. If we left our observation there, we might try to — naively — ban the sale of ice cream. Of course we'd have no success, considering how these occurrences are only correlated; the missing variable being temperature, as ice cream sales and murder rates spike in hotter temperatures.
 
-
 ## Data collection and organization
+
 #### De-biased or bias transparent data
 
 This concern is one that needs to be top of mind, so that your AI doesn’t optimize inequity. Bias — prejudice in favor of or against one thing, person, or group compared with another — can be introduced at many stages of the process. If we choose an unrepresentative sample, it skews the dataset in favor of the overrepresented. During the data entry, subjective, and often qualitative, fields are subject to the user's interpretation, e.g. assessing how you feel on a day to day basis. Annotation, or tagging and labeling the data with pertinent information, brings with it the lenses each annotator sees the world through.
@@ -85,6 +89,7 @@ This concern is one that needs to be top of mind, so that your AI doesn’t opti
 It's worth noting explicitly right now, that even assuming data purity and removing all bias from it — which in many cases is nothing short of impossible — machine learning by its very nature is always a form of statistical discrimination.
 
 ## Takeaway
+
 When we get in our car, we think of the destination, rarely what's needed to get us there. Insights are the destination, data is the fuel. Consequently, before you set off on your AI journey, be mindful of what it takes to acquire enough useful and de-biased data.
 
 Even though it's important to plan for where we want to land, it's equally important to understand how to get there. Data is one half of the AI equation, and requires conscious consideration.
